# BachelorProject

./: CMakeLists.txt  TODO.txt  main.cpp
BVH/: BVH.cpp  BVH.h  boxBVH.cpp  boxBVH.h  clothBVH.cpp  clothBVH.h  defCubeBVH.cpp  defCubeBVH.h  defSphereBVH.cpp  defSphereBVH.h  imBVH.cpp  imBVH.h  sphereBVH.cpp  sphereBVH.h
Bodies/Deformable/: deformableCube.cpp  deformableCube.h  deformableObjects.cpp  deformableObjects.h  deformableSphere.cpp  deformableSphere.h  importedModels.cpp  importedModels.h  net.cpp  net.h  particle.cpp  particle.h  spring.cpp  spring.hpp  texturedCloth.cpp  texturedCloth.h
Bodies/Solid/: Sphere.cpp  Sphere.h  collidable.cpp  collidable.h  cube.cpp  cube.h  mouseIntersectStruct.h  plane.cpp  plane.h
Collidables/: Sphere.cpp  Sphere.h  collidable.cpp  collidable.h  cube.cpp  cube.h  mouseIntersectStruct.h  plane.cpp  plane.h
integrators/: net.cpp  net.h  spring.cpp  spring.hpp
shaders/: controls.cpp  controls.hpp  helperFunctions.cpp  helperFunctions.h  helperStruct.h  texture.cpp
utilities/: helperFunctions.cpp  helperFunctions.h  multiThreading.cpp  multiThreading.h  skybox.cpp  skybox.h  stb_image.h  stdbi_image.h
